dark mode fix

--- a/lottery.css
+++ b/lottery.css
@@ -28,7 +28,6 @@
 
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: black;
     color: white;
   }
 }
